--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.3.0"
+    "mongodb": "^3.3.0",
+    "mongoose": "^5.6.10"
   }
 }
